@@ -1,3 +1,9 @@
+2010-08-29 <Gustaf.Neumann@wu-wien.ac.at>
+    * Fixed bug in filters reported by Kristoffer Lawson.  When a
+	filter chain reaches its end without finding the invoked method,
+	the unknown state was not resetted correctly and affected
+	method invocations in the filter after "next".
+
 2009-11-13 <Gustaf.Neumann@wu-wien.ac.at>
     * Release of XOTcl 1.6.6
 
